# archon

./: .gitignore  .sassrc.json  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  MANIFEST.in  Makefile  README.md  ansible.cfg  package.json  pyproject.toml  tsconfig.json
.cursor/rules/: architecture.mdc  base.mdc
.github/workflows/: update-tls.yml
ansible/: archon.yml  backup.yml  hosts.ini  restore.yml  setup.yml  update-tls.yml
ansible/roles/fastapi-backend/tasks/: main.yml
ansible/roles/fastapi-backend/templates/: env.j2  https.conf.j2  service.j2
ansible/roles/fastapi-backend/vars/: main.yml
ansible/roles/postgres/tasks/: main.yml
ansible/roles/postgres/vars/: main.yml
ansible/roles/postgresql-backup/tasks/: main.yml
ansible/roles/postgresql-restore/tasks/: main.yml
ansible/roles/postgresql-restore/vars/: main.yml
ansible/roles/register-tls/tasks/: main.yml
ansible/roles/register-tls/templates/: http.conf.j2
ansible/roles/register-tls/vars/: main.yml
ansible/roles/setup/handlers/: main.yml
ansible/roles/setup/tasks/: main.yml
ansible/roles/setup/templates/: journald.conf.j2
src/archon/: api.py  cli.py  db.py  engine.py  events.py  geo.py  models.py  scoring.py  tournament.py  vekn.py
src/archon/app/: __main__.py  dependencies.py  main.py
src/archon/app/api/: admin.py  auth.py  healthcheck.py  league.py  tournament.py  vekn.py
src/archon/app/html/: website.py
src/archon/geodata/: countries.json
src/archon/sheets/: thearchon_googlesheets.xlsx  thearchon_libreoffice.ods
src/archon/templates/: 401.html.j2  403.html.j2  404.html.j2  error.html.j2  index.html.j2  layout.html.j2  login.html.j2  oauth.html.j2  profile.html.j2  tournament.html.j2
src/archon/templates/admin/: display.html.j2
src/archon/templates/document/: archon-help.html.j2  code-of-ethics.html.j2  code_of_ethics.html.j2  judges-guide.html.j2  judges_guide.html.j2  (+2 more)
src/front/: admin.ts  base.ts  checkin.ts  console.ts  d.ts  events.ts  layout.scss  league.ts  league_display.ts  league_list.ts  login.ts  member.ts  member_display.ts  member_list.ts  offline.ts  optimal_seating_3r.json  profile.ts  seating.ts  topnav.ts  tournament.ts  tournament_display.ts  tournament_form.ts  tournament_list.ts  utils.ts
src/front/modals/: check_in.ts  deck.ts  override.ts  player_select.ts  sanction.ts  sanction_player.ts  score.ts  seed_finals.ts
src/front/tournament/: console.ts  engine.ts  local_engine.ts  registration.ts  round_tab.ts
src/scripts/: extract_seating.py  geonames.py
src/tests/: test_engine.py  test_scoring.py  test_vekn.py
(+17 files in other folders)
